---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: ????
  Bugfixes:
    - Fixed incompatibility with Mining Drones
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 12 February 2020
  Features:
    - Added support for modded poles from Bio Industries (more can be added upon request)
  Changes:
    - Transformers now have a red tint to distinguish them from power switches
    - "Very big electric pole" renamed to "Huge electric pole"
    - Lots of internal name changes
    - Transformers no longer show up in both "Consumption" and "Production" sides of electric network statistics
  Bugfixes:
    - Fixed mining a transformer or huge electric pole returns the wrong item to the player's inventory
    - Transformer internal buffer sizes now shrink dynamically (instead of just growing in previous versions)
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 8 February 2020
  Bugfixes:
    - Fixed crash on load
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 8 February 2020
  Features:
    - Added setting to customise power poles' maximum consumptions
    - Added support for modded poles from AAI Industry, Bob's Power, and Cargo Ships (more can be added upon request)
    - Added option to have overloading a power pole damage it instead of instantly destroying it 
  Changes:
    - Reverted electric pole names back to their vanilla names
    - Increased crafting time for "Very big electric pole" from 0.5 to 1.5 seconds
  Bugfixes:
    - Fixed crash when adding this mod to a save that it has been previously loaded with
    - Fixed "Big" and "Very big" power poles never exploding
---------------------------------------------------------------------------------------------------
Version: 1.0.0